--- a/analiysis_on_top_1000_movie_duration.ipynb
+++ b/analiysis_on_top_1000_movie_duration.ipynb
@@ -67,14 +67,14 @@
         "trusted": true,
         "id": "JYLmmdDWwEM7"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#making a pandas dataset from the .csv input\n",
-        "dataset_path = '/content/drive/MyDrive/Dataset/Top_1000_Highest_Grossing_Movies_Of_All_Time.csv'\n",
+        "dataset_path = 'https://raw.githubusercontent.com/gabrielterceiro/movieDurationAnalysis/main/Top_1000_Highest_Grossing_Movies_Of_All_Time.csv'\n",
         "df = pd.read_csv(dataset_path)"
       ],
       "metadata": {
@@ -88,7 +88,7 @@
         "trusted": true,
         "id": "5xQkYuQVwENB"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "trusted": true,
         "id": "pElZ2rihwENC"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -133,9 +133,9 @@
           "height": 480
         },
         "id": "rD4vq5ikwEND",
-        "outputId": "03ad5966-8cf7-4742-b7b1-8bf2347b03ca"
+        "outputId": "3f8f66d0-af96-4373-a160-70670e2567f8"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -175,9 +175,9 @@
           "height": 279
         },
         "id": "gLg7ajpEwENF",
-        "outputId": "6650fb5e-9439-489e-ba12-f560af4d1038"
+        "outputId": "e8cb7968-e73e-4773-c3d0-717c0f2c4a21"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
